@@ -5,6 +5,8 @@ shibboleth-sp2 (2.4.3+dfsg-4) UNRELEASED; urgency=low
     - Enable multiarch support.
   * Rebuild the Autotools build system using dh-autoreconf instead of
     rolling our own version of the same thing.
+  * Rewrite the shibd init script to use the LSB init script functions and
+    implement the status action.
 
  -- Russ Allbery <rra@debian.org>  Wed, 01 Feb 2012 22:27:55 -0800
 
